Fixed issue with aboutme and dark mode erasing page content

--- a/aboutme.css
+++ b/aboutme.css
@@ -1,16 +1,34 @@
+.theme-light {
+    --color-primary: hsl(0, 0%, 100%);
+    --color-secondary: hsl(169, 61%, 79%);
+    --color-accent: hsl(164, 60%, 57%);
+    --font-color: hsl(0, 0%, 0%);
+    --shadow-color: rgba(0,0,0,0.3);
+    --main-color: #f0f0f0;
+}
+
+.theme-dark {
+    --color-primary: hsl(0, 1%, 14%);
+    --color-secondary: hsl(235, 81%, 15%);
+    --color-accent: hsl(235, 84%, 29%);
+    --font-color: hsl(0, 0%, 100%);
+    --shadow-color: rgba(255, 255, 255, 0.3);
+    --main-color: #2f2c2c;
+}
+
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
     min-height: 100vh;
-    background-color: #f0f0f0;
+    background-color: var(--main-color);
 }
 
 header {
     width: 100%;
     background-color: #333;
-    color: white;
+    color: var(--font-color);
     text-align: center;
 }
 
@@ -44,8 +62,9 @@ main {
     width: 100%;
     max-width: 800px;
     padding: 1em;
-    background-color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: var(--color-primary);
+    box-shadow: var(--shadow-color);
+    color: var(--font-color);
 }
 
 details {
@@ -74,7 +93,7 @@ details table, details th, details td {
 }
 
 details th {
-    background-color: #f4f4f4;
+    background-color: var(--main-color);
 }
 
 details dl dt {
@@ -89,7 +108,7 @@ details dl dd {
 blockquote {
     margin: 1em 0;
     padding: 1em;
-    background-color: #f9f9f9;
+    background-color: var(--main-color);
     border-left: 5px solid #ccc;
 }
 
