--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 
 .theme-dark {
-    --color-primary: hsl(0, 0%, 7%);
+    --color-primary: hsl(0, 1%, 14%);
     --color-secondary: hsl(235, 81%, 15%);
     --color-accent: hsl(235, 84%, 29%);
     --font-color: hsl(0, 0%, 100%);
